// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Context renders with default values 1`] = `
<body>
  <div>
    <div>
      <dl>
        <dt>
          param
        </dt>
        <dd>
          default
        </dd>
        <dt>
          context
        </dt>
        <dd>
          none
        </dd>
      </dl>
    </div>
    
  </div>
</body>
`;

exports[`Context renders with the given context 1`] = `
<body>
  <div>
    <div>
      <dl>
        <dt>
          param
        </dt>
        <dd>
          default
        </dd>
        <dt>
          context
        </dt>
        <dd>
          bar
        </dd>
      </dl>
    </div>
    
  </div>
</body>
`;

exports[`Context renders with the given parameters 1`] = `
<body>
  <div>
    <div>
      <dl>
        <dt>
          param
        </dt>
        <dd>
          defined
        </dd>
        <dt>
          context
        </dt>
        <dd>
          bar
        </dd>
      </dl>
    </div>
    
  </div>
</body>
`;

exports[`Context renders with the given props 1`] = `
<body>
  <div>
    <div>
      <dl>
        <dt>
          param
        </dt>
        <dd>
          defined
        </dd>
        <dt>
          context
        </dt>
        <dd>
          none
        </dd>
      </dl>
    </div>
    
  </div>
</body>
`;

exports[`Context resolves with the nested component 1`] = `
<body>
  <div>
    <div>
      <dl>
        <dt>
          param
        </dt>
        <dd>
          default
        </dd>
        <dt>
          context
        </dt>
        <dd>
          none
        </dd>
      </dl>
    </div>
    
  </div>
</body>
`;

exports[`Context updates with the given parameters 1`] = `
<body>
  <div>
    <div>
      <dl>
        <dt>
          param
        </dt>
        <dd>
          origin
        </dd>
        <dt>
          context
        </dt>
        <dd>
          bar
        </dd>
      </dl>
    </div>
    
  </div>
</body>
`;

exports[`Context updates with the given parameters 2`] = `
<body>
  <div>
    <div>
      <dl>
        <dt>
          param
        </dt>
        <dd>
          updated
        </dd>
        <dt>
          context
        </dt>
        <dd>
          bar
        </dd>
      </dl>
    </div>
    
  </div>
</body>
`;
